--- a/cbt/osnk/hasil.html
+++ b/cbt/osnk/hasil.html
@@ -676,8 +676,10 @@ $('document').ready(function() {
 	
 	$('#btn-unduh').click(function() {
 		//alert('Mohon maaf akses download belum tersedia');
+
+		window.print();
 		
-		const element = document.querySelector('body');
+		/*const element = document.querySelector('body');
 		const opt = {
 		  filename: 'hasil.pdf',
 		  margin: 2,
@@ -685,7 +687,7 @@ $('document').ready(function() {
 		  jsPDF: {format: 'A4', orientation: 'portrait'}
 		};
 		html2pdf().set(opt).from(element).save();
-		html2pdf(element, opt);
+		html2pdf(element, opt); */
 		
 		/*$.ajax({ 
 			   type: "POST",
